<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.Toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-16dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <ImageView
                    android:layout_width="210dp"
                    android:layout_height="210dp"
                    android:layout_gravity="center"
                    android:src="@drawable/airp"
                    tools:ignore="ContentDescription,ExtraText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/gotham"
                    android:text="@string/phone_confirmation"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/gotham"
                    android:lineSpacingExtra="6dp"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/gotham"
                    android:text="@string/enter_mobile_number"
                    android:textAlignment="center"
                    android:textColor="#a3a3a3"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:weightSum="100"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="25"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/todo" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="75"
                        android:background="#f6f6f6">

                        <EditText
                            android:id="@+id/mobile_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:fontFamily="@font/gotham"
                            android:hint="@string/_0712_345_678"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:padding="12dp"
                            android:textColor="#000000"
                            android:textColorHint="#c7c7c8"
                            android:textSize="16sp"
                            tools:ignore="Autofill,TouchTargetSizeCheck"
                            android:autofillHints="" />

                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/generate_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/buttonshape"
                    android:fontFamily="@font/gotham"
                    android:text="@string/confirm_to_pay"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />


            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>